--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ems",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server-test.js",
   "scripts": {
     "dev": "nodemon server.js"
   },
